--- a/templates/results.hbs
+++ b/templates/results.hbs
@@ -44,7 +44,8 @@
                         [{{type}}]
                     </h6>
                     {{#unless errorCount}}
-                    <p>No Errors Found</p>{{/unless}} {{#if errorCount}}
+                    <p>No Errors Found</p>
+                    {{/unless}} {{#if errorCount}}
                     <p>Error count: {{errorCount}} </p>
                     <p>Warning count: {{warningCount}} </p>
                     <p>File last modified by : {{updatedBy}}</p>
